--- a/ufl-bot-service/pom.xml
+++ b/ufl-bot-service/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>kt.sandbox</groupId>
-    <artifactId>dummy-web-service</artifactId>
+    <artifactId>ufl-bot-service</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
@@ -17,8 +17,8 @@
         <relativePath/>
     </parent>
 
-    <name>dummy-web-service</name>
-    <description>Dummy Service</description>
+    <name>ufl-bot-service</name>
+    <description>Ufl Bot Service</description>
 
     <properties>
         <kotlin.version>1.3.72</kotlin.version>
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>com.github.pengrad</groupId>
             <artifactId>java-telegram-bot-api</artifactId>
-            <version>4.8.0</version>
+            <version>4.9.0</version>
         </dependency>
 
 
