--- a/ufl-bot/pom.xml
+++ b/ufl-bot/pom.xml
@@ -23,6 +23,7 @@
     <properties>
         <kotlin.version>1.3.72</kotlin.version>
         <junit.version>5.4.2</junit.version>
+        <io-rest-assured.version>3.3.0</io-rest-assured.version>
     </properties>
 
     <repositories>
@@ -33,6 +34,27 @@
     </repositories>
 
     <dependencies>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${io-rest-assured.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured-common</artifactId>
+            <version>${io-rest-assured.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${io-rest-assured.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>xml-path</artifactId>
+            <version>${io-rest-assured.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.github.elbekD</groupId>
@@ -92,6 +114,9 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+
+
+
 
     </dependencies>
 
