--- a/ufl-bot-service/pom.xml
+++ b/ufl-bot-service/pom.xml
@@ -101,6 +101,13 @@
             <version>4.9.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.browserup</groupId>
+            <artifactId>browserup-proxy-core</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+
 
         <!--dependency>
             <groupId>org.seleniumhq.selenium</groupId>
