--- a/ufl-bot/pom.xml
+++ b/ufl-bot/pom.xml
@@ -5,16 +5,15 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>kt.sandbox</groupId>
-    <artifactId>ufl-bot</artifactId>
+   <artifactId>ufl-bot</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
+
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
-        <relativePath/>
+        <groupId>kt.sandbox</groupId>
+        <artifactId>ufl</artifactId>
+        <version>0.1-SNAPSHOT</version>
     </parent>
 
     <name>ufl-bot</name>
@@ -71,36 +70,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-            </exclusions>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jetty</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.15.1</version>
         </dependency>
 
         <dependency>
@@ -116,12 +88,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.15.1</version>
+            <groupId>kt.sandbox</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0</version>
         </dependency>
-
-
 
 
     </dependencies>
@@ -160,6 +130,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
