--- a/common/pom.xml
+++ b/common/pom.xml
@@ -28,7 +28,15 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.elbekD</groupId>
+            <artifactId>kt-telegram-bot</artifactId>
+            <version>1.3.5</version>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
