--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,6 +16,13 @@
         <version>0.1-SNAPSHOT</version>
     </parent>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
